--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ rmq.stomp.login=tapuser
 rmq.stomp.passcode=tapuser
 server.port=9090
 
-api.server.baseurl=http://localhost:8080/XimpApi
-#api.server.baseurl=http://52.221.79.237:8080/LoyaltyCardApi
+#api.server.baseurl=http://localhost:8080/XimpApi
+api.server.baseurl=http://52.221.79.237:8080/XimpApi
 api.server.port=8080
