Added holder_name on InquiryObject

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ server.port=9090
 #api.server.baseurl=http://localhost:8080/XimpApi
 api.server.baseurl=http://52.221.79.237:8080/XimpApi
 api.server.port=8080
+
+spring.profiles.active=fast
