--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ api.server.baseurl=http://52.221.79.237:8080/XimpApi
 api.server.port=8080
 
 spring.profiles.active=fast
+
+spring.datasource.url=jdbc:mysql://localhost/ximpletap?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=4332wurx
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
