--- a/pom.xml
+++ b/pom.xml
@@ -77,10 +77,9 @@
 			<version>9.3.18.v20170406</version>
 		</dependency>
 		
-		<dependency>
-    		<groupId>org.springframework</groupId>
-    		<artifactId>spring-jdbc</artifactId>
-    		<version>4.2.4.RELEASE</version>
+		 <dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 	</dependencies>
 
